# IAOP

./: .gitignore  CMakeLists.txt  README.md  run
configs/2SDBNYamlFiles/GAC/: 129AgentsGrabAChairP00.yaml  17AgentsGrabAChairP00.yaml  33AgentsGrabAChairP00.yaml  5AgentsGrabAChairP00.yaml  5AgentsGrabAChairP01.yaml  5AgentsGrabAChairP02.yaml  5AgentsGrabAChairP03.yaml  5AgentsGrabAChairP04.yaml  5AgentsGrabAChairP05.yaml  5AgentsGrabAChairP06.yaml  5AgentsGrabAChairP07.yaml  5AgentsGrabAChairP08.yaml  5AgentsGrabAChairP09.yaml  65AgentsGrabAChairP00.yaml  9AgentsGrabAChairP00.yaml
configs/2SDBNYamlFiles/GTC/: 3X3L6obsL1in_prob1.0out_prob0.3obs_noise0.0init_prob0.7.yaml
configs/GAC-coupling/p01/: global.yaml  inf_gru_H8_D1000.yaml  inf_gru_H8_D1000SPLIT0.yaml  inf_rand.yaml
configs/GAC-coupling/p02/: global.yaml  inf_gru_H8_D1000.yaml  inf_gru_H8_D1000SPLIT2.yaml  inf_rand.yaml
configs/GAC-coupling/p03/: global.yaml  inf_gru_H8_D1000.yaml  inf_gru_H8_D1000SPLIT1.yaml  inf_rand.yaml
configs/GAC-coupling/p04/: global.yaml  inf_gru_H8_D1000.yaml  (+2 more)
notebooks/: Plot-Results.ipynb
notebooks/.ipynb_checkpoints/: Plot-Results-checkpoint.ipynb
scripts/: run_benchmark
singularity/: FADMEN.def
src/: Utils.hpp  main.cpp
src/agents/: AgentComponent.hpp  AtomicAgent.hpp  PlanningAgent.hpp
src/dbns/: TwoStageDynamicBayesianNetwork.hpp  TwoStageDynamicBayesianState.hpp  TwoStageDynamicBayesianVariable.hpp
src/domains/: Domain.hpp
src/influence/: InfluencePredictor.hpp  influence_predictor.py
src/runners/: DataGenerationExperiment.hpp  Episode.hpp  Experiment.hpp
(+829 files in other folders)
